finish hw 4